fix bug #1231732
Fixed cropped button on Firefox ios page

--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -739,7 +739,7 @@ a.go {
     .font-size(@smallFontSize);
     color: #fff;
     text-align: center;
-    margin-top: 10px;
+    //margin-top: 10px;
 }
 
 
